<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AFileDialogTestingActivity!</string>
    <string name="app_name">aFileDialog demo</string>
    <string name="Open_Dialog">Open dialog</string>
    <string name="Open_Activity">Open activity</string>
    <string name="test_dialog">Dialog</string>
    <string name="test_activity">Activity</string>
    <string name="simple_open">Simple open</string>
    <string name="open_downloads">Open Downloads</string>
    <string name="select_folders">Select folders</string>
    <string name="create_files">Create files</string>
    <string name="select_images">Select images</string>
    <string name="ask_confirmation">Ask confirmation</string>
    <string name="custom_labels">Custom labels</string>
    <string name="cancel_button">Cancel button</string>

</resources>