<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_dialog"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/dialog_simple_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple_open" />

            <Button
                android:id="@+id/dialog_open_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_downloads" />

            <Button
                android:id="@+id/dialog_select_folders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_folders" />

            <Button
                android:id="@+id/dialog_create_files"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_files" />

            <Button
                android:id="@+id/dialog_select_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_images" />

            <Button
                android:id="@+id/dialog_ask_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_confirmation" />

            <Button
                android:id="@+id/dialog_custom_labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_labels" />

            <Button
                android:id="@+id/dialog_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/dialog_filter_folders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_folders" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_activity"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/activity_simple_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple_open" />

            <Button
                android:id="@+id/activity_open_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_downloads" />

            <Button
                android:id="@+id/activity_select_folders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_folders" />

            <Button
                android:id="@+id/activity_create_files"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_files" />

            <Button
                android:id="@+id/activity_select_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_images" />

            <Button
                android:id="@+id/activity_ask_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_confirmation" />

            <Button
                android:id="@+id/activity_custom_labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_labels" />

            <Button
                android:id="@+id/activity_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/activity_filter_folders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_folders" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>